# chatassistant_retail

./: .env.example  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HISTORY.md  LICENSE  MANIFEST.in  README.md  app.py  justfile  pyproject.toml  requirements.txt  requirements_hf.txt
.github/: ISSUE_TEMPLATE.md
.github/workflows/: syn-to-hf.yml
data/: products.json  purchase_orders.json  sales_history.json
data/Scratchpad/: Scratchpad.txt
docs/: index.md  installation.md  troubleshooting.md  usage.md
scripts/: generate_sample_data.py  index_diff.py  run_local.sh  setup_azure_search.py  test_gradio_ui.py  test_phase2.py  test_phase3.py
src/chatassistant_retail/: __init__.py  __main__.py  chatbot.py  cli.py  utils.py
src/chatassistant_retail/config/: __init__.py  deployment.py  settings.py
src/chatassistant_retail/data/: __init__.py  models.py  sample_generator.py
src/chatassistant_retail/llm/: __init__.py  azure_openai_client.py  prompt_templates.py  response_parser.py
src/chatassistant_retail/observability/: __init__.py  decorators.py  langfuse_client.py  metrics_collector.py
src/chatassistant_retail/rag/: __init__.py  azure_search_client.py  embeddings.py  retriever.py
src/chatassistant_retail/state/: __init__.py  langgraph_manager.py  memory_store.py  persistent_store.py  session_store.py
src/chatassistant_retail/tools/: __init__.py  context_utils.py  inventory_tools.py  mcp_server.py  purchase_order_tools.py
src/chatassistant_retail/ui/: __init__.py  chat_interface.py  gradio_app.py  metrics_dashboard.py
src/chatassistant_retail/workflow/: __init__.py  image_processor.py
tests/: __init__.py  test_chatassistant_retail.py
tests/integration/: __init__.py  test_state_manager.py  test_tool_context_integration.py
tests/unit/: test_azure_openai_client.py  test_azure_search_client.py  test_context_utils.py  test_data_generator.py  test_image_processor.py  test_inventory_tools.py  test_mcp_server.py  test_observability.py  test_retriever.py  test_session_store.py
